# Original-Pinball-Compilation

./: .gitignore  7segment_protocol.txt  CMakeLists.txt  Makefile  Pinball.cbp  Pinball.depend  Pinball.layout  README.md  engine.cpp
config/: config.txt
controls/: controls.txt
fonts/common/: 14segment_protocol.txt  24high12wide_kerningdata.txt
records/: Magical-Robot-records.txt  Saturn-Strikes-records.txt
scripts/: Magical-Robot.txt  Saturn-Strikes.txt  test-script.txt
tools/: build-macos.sh  run.sh
